--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
@@ -23,10 +24,13 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.4.2",
     "webpack": "^3.4.1"
   },
   "devDependencies": {
+    "mongoose": "^4.11.5",
+    "nodemon": "^1.11.0",
     "redux-logger": "^3.0.6"
   }
 }
