--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "concurrently --kill-others \"nodemon ./bin/www\" \"nodemon apiServer.js\""
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -13,9 +13,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "body-parser": "~1.17.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "express-session": "^1.15.4",
+    "http-proxy": "^1.16.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "react": "^15.6.1",
@@ -29,6 +33,7 @@
     "webpack": "^3.4.1"
   },
   "devDependencies": {
+    "concurrently": "^3.5.0",
     "mongoose": "^4.11.5",
     "nodemon": "^1.11.0",
     "redux-logger": "^3.0.6"
