--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "http-proxy": "^1.16.2",
